syntax = "proto3";

package user.v1.file;

option go_package = "vw_user/api/v1/userfile;filev1";

service FileService {
    rpc UploadAvatar(stream UploadAvatarReq) returns (UploadAvatarResp) {}
}

message UploadAvatarReq {
    oneof data {
        string file_name   = 1;
        bytes file_content = 2;
    }
}

message UploadAvatarResp {
    string file_path = 1;
}